--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <!-- Example Sections for Content -->
     <section class="article">
         <div class="article-container">
-            <img src="cover-image1.jpg" alt="Article Cover Image" class="article-image">
+            <img src="/image's /hAxC5ILw_thumb.jpg" alt="Article Cover Image" class="article-image">
             <div class="article-content">
-                <h2>Latest Gaming News</h2>
+                <h2>New Pubg game 2.0</h2>
                 <p>Stay up-to-date with the latest news in the gaming world...</p>
                 <a href="#" class="read-more">Read More</a>
             </div>
