--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="article-content">
                 <h2>New Pubg game 2.0</h2>
                 <p>Stay up-to-date with the latest news in the gaming world...</p>
-                <a href="#" class="read-more">Read More</a>
+                <a href="/news/pubgnews.html" class="read-more">Read More</a>
             </div>
         </div>
     </section>
