--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
     <section class="article">
         <div class="article-container">
-            <img src="cover-image2.jpg" alt="Article Cover Image" class="article-image">
+            <img src="/image's /black myth .jpg" alt="Article Cover Image" class="article-image">
             <div class="article-content">
-                <h2>Game Reviews</h2>
+                <h2>Black Myth Wukong</h2>
                 <p>Read our detailed reviews on the latest games...</p>
                 <a href="#" class="read-more">Read More</a>
             </div>
