--- a/index.html
+++ b/index.html
@@ -42,10 +42,25 @@
             <div class="article-content">
                 <h2>Black Myth Wukong</h2>
                 <p>Read our detailed reviews on the latest games...</p>
-                <a href="#" class="read-more">Read More</a>
+                <a href="/news/blacksmith.html" class="read-more">Read More</a>
             </div>
         </div>
     </section>
+
+<section class="article">
+        <div class="article-container">
+            <img src="/image's /fallguysvsstumbleguys.jpg" alt="Article Cover Image" class="article-image">
+            <div class="article-content">
+                <h2>Stumble Guys vs fall Guys</h2>
+                <p>Read our detailed reviews on the latest games...</p>
+                <a href="/news/Fall Guys MobilevsStumble Guys.html" class="read-more">Read More</a>
+            </div>
+        </div>
+    </section>
+
+
+
+
 
     <footer>
         <p>&copy; 2024 Ramp Strick | <a href="https://www.youtube.com/">Our YouTube Channel</a></p>
