--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <img src="/image's /black myth .jpg" alt="Article Cover Image" class="article-image">
             <div class="article-content">
                 <h2>Black Myth Wukong</h2>
-                <p>Read our detailed reviews on the latest games...</p>
+                <p>Read our detailed reviews on the latest games....</p>
                 <a href="/news/blacksmith.html" class="read-more">Read More</a>
             </div>
         </div>
