--- a/index.html
+++ b/index.html
@@ -60,6 +60,18 @@
 
 
 
+    <section class="article">
+        <div class="article-container">
+            <img src="/image's /2024games.jpeg" alt="Article Cover Image" class="article-image">
+            <div class="article-content">
+                <h2>2024 popular games </h2>
+                <p>Read our detailed reviews on the latest games...</p>
+                <a href="/news/populargames2024list.html" class="read-more">Read More</a>
+            </div>
+        </div>
+    </section>
+
+
 
 
     <footer>
