--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="article-content">
                 <h2>Stumble Guys vs fall Guys</h2>
                 <p>Read our detailed reviews on the latest games...</p>
-                <a href="/news/Fall Guys MobilevsStumble Guys.html" class="read-more">Read More</a>
+                <a href="news/Fall Guys MobilevsStumble Guys.html" class="read-more">Read More</a>
             </div>
         </div>
     </section>
