--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <section class="article">
         <div class="article-container">
-            <img src="/image's /fallguysvsstumbleguys.jpg" alt="Article Cover Image" class="article-image">
+            <img src="image's /fallguysvsstumbleguys.jpg" alt="Article Cover Image" class="article-image">
             <div class="article-content">
                 <h2>Stumble Guys vs fall Guys</h2>
                 <p>Read our detailed reviews on the latest games...</p>
