--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
     <!-- Example Sections for Content -->
     <section class="article">
         <div class="article-container">
-            <img src="/image's /hAxC5ILw_thumb.jpg" alt="Article Cover Image" class="article-image">
+            <img src="image's /hAxC5ILw_thumb.jpg" alt="Article Cover Image" class="article-image">
             <div class="article-content">
                 <h2>New Pubg game 2.0</h2>
                 <p>Stay up-to-date with the latest news in the gaming world...</p>
-                <a href="/news/pubgnews.html" class="read-more">Read More</a>
+                <a href="news/pubgnews.html" class="read-more">Read More</a>
             </div>
         </div>
     </section>
 
     <section class="article">
         <div class="article-container">
-            <img src="/image's /black myth .jpg" alt="Article Cover Image" class="article-image">
+            <img src="image's /black myth .jpg" alt="Article Cover Image" class="article-image">
             <div class="article-content">
                 <h2>Black Myth Wukong</h2>
                 <p>Read our detailed reviews on the latest games....</p>
-                <a href="/news/blacksmith.html" class="read-more">Read More</a>
+                <a href="news/blacksmith.html" class="read-more">Read More</a>
             </div>
         </div>
     </section>
@@ -62,11 +62,11 @@
 
     <section class="article">
         <div class="article-container">
-            <img src="/image's /2024games.jpeg" alt="Article Cover Image" class="article-image">
+            <img src="image's /2024games.jpeg" alt="Article Cover Image" class="article-image">
             <div class="article-content">
                 <h2>2024 popular games </h2>
                 <p>Read our detailed reviews on the latest games...</p>
-                <a href="/news/populargames2024list.html" class="read-more">Read More</a>
+                <a href="news/populargames2024list.html" class="read-more">Read More</a>
             </div>
         </div>
     </section>
