--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
         </div>
     </section>
 
+  <section class="article">
+        <div class="article-container">
+            <img src="image's /battle Guys.jpg" alt="Article Cover Image" class="article-image">
+            <div class="article-content">
+                <h2>Battle Guys</h2>
+                <p>Stay up-to-date with the latest news in the gaming world...</p>
+                <a href="news/battleguys.html" class="read-more">Read More</a>
+            </div>
+        </div>
+    </section>
+
+
     <section class="article">
         <div class="article-container">
             <img src="image's /black myth .jpg" alt="Article Cover Image" class="article-image">
