--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ramp Strick - Interactive Gaming News</title>
     <link rel="stylesheet" href="styles.css">
+
+<!--- meta tag verifying by console  -->
+
+<meta name="google-site-verification" content="pafeP3JPqMTygHBPny1bEoorj9h1xW8Dqy0uBvH2JSU" />
+
+<!-- verify code eneded   -->
 </head>
 <body>
     <nav class="navbar">
