--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">News</a></li>
-                <li><a href="#">Reviews</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="home- about-etc/privacy.html">Privacy policy</a></li>
+                <li><a href="home- about-etc/contact.html">Contact</a></li>
             </ul>
         </div>
     </nav>
