--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">News</a></li>
                 <li><a href="home- about-etc/privacy.html">Privacy policy</a></li>
-                <li><a href="home- about-etc/contact.html">Contact</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </div>
     </nav>
