--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </button>
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">News</a></li>
+                <li><a href="home/about.html">about</a></li>
                 <li><a href="home/privacyraml.html">Privacy policy</a></li>
                 <li><a href="home/contact.html">Contact</a></li>
             </ul>
