--- a/home/about.html
+++ b/home/about.html
@@ -43,7 +43,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('page home gifs/e468b2fbcd58c477fbcd69b2dcc009d2_w200.gif'); /* Replace with your GIF URL */
+            background-image: url('/page home gifs/aboutlogogif.gif'); /* Replace with your GIF URL */
             background-size: cover;
             -webkit-background-clip: text;
             color: transparent;
