--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="article-content">
                 <h2>Roco Kingdom</h2>
                 <p>Stay up-to-date with the latest news in the gaming world...</p>
-                <a href="/news/rocokingdom.html" class="read-more">Read More</a>
+                <a href="news/rocokingdom.html" class="read-more">Read More</a>
             </div>
         </div>
     </section>
@@ -50,7 +50,7 @@
             <div class="article-content">
                 <h2>Free Fire India</h2>
                 <p>Stay up-to-date with the latest news in the gaming world...</p>
-                <a href="/news/ffindiaunban.html" class="read-more">Read More</a>
+                <a href="news/ffindiaunban.html" class="read-more">Read More</a>
             </div>
         </div>
     </section>
@@ -62,7 +62,7 @@
             <div class="article-content">
                 <h2>Roblox</h2>
                 <p>Stay up-to-date with the latest news in the gaming world...</p>
-                <a href="/news/Roblox1.html" class="read-more">Read More</a>
+                <a href="news/Roblox1.html" class="read-more">Read More</a>
             </div>
         </div>
     </section>
@@ -74,7 +74,7 @@
             <div class="article-content">
                 <h2>Pokemon Unite</h2>
                 <p>Stay up-to-date with the latest news in the gaming world...</p>
-                <a href="/news/Pokemonunite.html" class="read-more">Read More</a>
+                <a href="news/Pokemonunite.html" class="read-more">Read More</a>
             </div>
         </div>
     </section>
