--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ramp Strick - Interactive Gaming News</title>
     <link rel="stylesheet" href="styles.css">
+    
+    
+    <meta name="description" content="Stay updated with the latest gaming news, game reviews, and industry insights on Ramp Strick. Discover trending games, upcoming releases, and in-depth analysis for gamers and enthusiasts alike.">
 
 <!--- meta tag verifying by console  -->
 
