--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <img src="Image's of inside news section /indus image 1.jpg" alt="Article Cover Image" class="article-image">
             <div class="article-content">
                 <h2>Indus Battle Royale</h2>
-                <p>Stay up-to-date with the latest news in the gaming world...</p>
+                <p>Stay up-to-date with the latest news in the gaming world Indus...</p>
                 <a href="news/induagame.html" class="read-more">Read More</a>
             </div>
         </div>
