--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <span class="hamburger"></span>
             </button>
             <ul class="nav-links">
-                <li><a href="#">Home</a></li>
+                <li><a href="Ramp Strick data text upload /form.html">Home</a></li>
                 <li><a href="home/about.html">about</a></li>
                 <li><a href="home/privacyraml.html">Privacy policy</a></li>
                 <li><a href="home/contact.html">Contact</a></li>
