--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                 <li><a href="home/about.html">about</a></li>
                 <li><a href="home/privacyraml.html">Privacy policy</a></li>
                 <li><a href="home/contact.html">Contact</a></li>
-                  <li><a href="real data /index.html">testing</a></li>
+                  <li><a href="real data /index.html">Ramp Strick Social media</a></li>
+                      <li><a href="real data /views.html">See post's </a></li>
             </ul>
         </div>
     </nav>
