--- a/real data /views.html
+++ b/real data /views.html
@@ -3,31 +3,34 @@
 <head>
     <title>Ramp Strick Post's</title>
     <style>
-      body {
-        font-family: Arial, sans-serif;
+      * {
         margin: 0;
         padding: 0;
+        box-sizing: border-box;
+      }
+      body {
+        font-family: Arial, sans-serif;
         color: #333;
         overflow: auto; /* Ensures scrolling is possible */
+        margin: 0;
+        padding: 0;
       }
       h1 {
         color: #007bff;
-        margin-top: 20px;
+        margin: 20px 0;
         text-align: center;
+        font-size: 1.5em;
       }
       .search-container {
-        margin-bottom: 20px;
-        width: 100%;
+        margin: 20px auto;
+        width: 90%;
         max-width: 600px;
-        margin-left: auto;
-        margin-right: auto;
       }
       input[type="text"] {
         width: 100%;
         padding: 12px;
         border: 1px solid #ddd;
         border-radius: 4px;
-        box-sizing: border-box;
         font-size: 16px;
         transition: border-color 0.3s ease;
       }
@@ -36,11 +39,9 @@
         outline: none;
       }
       #data-container {
-        width: 100%;
+        width: 90%;
         max-width: 600px;
-        margin-left: auto;
-        margin-right: auto;
-        padding-bottom: 100px; /* Ensures space for scrolling */
+        margin: 20px auto;
       }
       .data-item {
         background: #fff;
@@ -106,7 +107,7 @@
 </head>
 <body>
     <canvas id="backgroundCanvas"></canvas>
-    <h1 style="color: purple">Ramp Strick - Post's</h1>
+    <h1>Ramp Strick - Posts</h1>
     <div class="search-container">
         <input type="text" id="search" placeholder="Search..." oninput="filterData()">
     </div>
