--- a/index.html
+++ b/index.html
@@ -179,5 +179,12 @@
     </footer>
 
     <script src="scripts.js"></script>
+
+<script type="text/javascript"> var infolinks_pid = 3425181; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
+
+
+
+
+
 </body>
 </html>
