--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li><a href="home/privacyraml.html">Privacy policy</a></li>
                 <li><a href="home/contact.html">Contact</a></li>
                   <li><a href="real data /imageupl.html">Ramp Strick Social media</a></li>
-                     
+                       <li><a href="style website web deb/index.html">Discord Deign </a></li>
             </ul>
         </div>
     </nav>
