--- a/style website web deb/index.html
+++ b/style website web deb/index.html
@@ -24,11 +24,11 @@
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "Ramp Strick Design Discord",
-        "url": "style website web deb/index.html",
+        "url": "https://aliff34.github.io/Ramp-Strick-/style%20website%20web%20deb/index.html",
         "description": "Ramp Strick Design Discord offers pre-formatted Discord-style text for your server categories like Rules, FAQ, and Server Design. Easily copy and paste to enhance your Discord server.",
         "potentialAction": {
             "@type": "SearchAction",
-            "target": "https://yourwebsite.com/search?q={search_term_string}",
+            "target": "https://aliff34.github.io/Ramp-Strick-/style%20website%20web%20deb/index.html",
             "query-input": "required name=search_term_string"
         }
     }
