--- a/style website web deb/index.html
+++ b/style website web deb/index.html
@@ -28,7 +28,7 @@
         "description": "Ramp Strick Design Discord offers pre-formatted Discord-style text for your server categories like Rules, FAQ, and Server Design. Easily copy and paste to enhance your Discord server.",
         "potentialAction": {
             "@type": "SearchAction",
-            "target": "https://aliff34.github.io/Ramp-Strick-/style%20website%20web%20deb/index.html",
+            "target": "https://aliff34.github.io/Ramp-Strick-/style%20website%20web%20deb/index.html={search_term_string}",
             "query-input": "required name=search_term_string"
         }
     }
